Removed mvn wrapper. Rollback sfg-data classes. Rollback poms